--- a/myshop/docker_compose/django/requirements.txt
+++ b/myshop/docker_compose/django/requirements.txt
@@ -1,10 +1,16 @@
 amqp==2.2.2
 billiard==3.5.0.3
 celery==4.1.0
+certifi==2018.1.18
+chardet==3.0.4
 Django==2.0.3
-gunicorn==19.7.1
+-e git+https://github.com/204070/django-paystack.git@164163b70a07f38c50c26ba46b47a105322b357b#egg=django_paystack
+future==0.16.0
+idna==2.6
 kombu==4.1.0
 Pillow==5.0.0
 psycopg2==2.7.4
 pytz==2018.3
+requests==2.18.4
+urllib3==1.22
 vine==1.1.4
